apps/minio/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
  name: minio-ingress
  namespace: minio
spec:
  tls:
    - hosts:
      - minio.oasisvali.com
      secretName: minio-tls-secret
  rules:
    - host: minio.oasisvali.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
